--- a/bmstu_lab/templates/product.html
+++ b/bmstu_lab/templates/product.html
@@ -7,7 +7,7 @@
         <h3>
         <div>Название   {{ data.product.title }} </div>
         <div>Категория  {{ data.product.cathegory }}</div>
-        <div>Вкус   {{ data.product.taste }}</div>
+        <div>Вкус бебрыыы  {{ data.product.taste }}</div>
     </h3>
     </div>
 
