--- a/bmstu_lab/templates/product.html
+++ b/bmstu_lab/templates/product.html
@@ -4,10 +4,11 @@
 
 {% block content %}
     <div class="product_details">
+        <img src="{{ data.product.img }}" width="450", height="350">
         <h3>
         <div>Название   {{ data.product.title }} </div>
         <div>Категория  {{ data.product.cathegory }}</div>
-        <div>Вкус бебрыыы  {{ data.product.taste }}</div>
+        <div>Вкус  {{ data.product.taste }}</div>
     </h3>
     </div>
 
